Added some end-of-chat-study-deck flow stuff.

--- a/client/src/components/common/ChatHeader/ChatHeader.module.css
+++ b/client/src/components/common/ChatHeader/ChatHeader.module.css
@@ -12,6 +12,10 @@
     margin: 0;
 }
 
+.roomNameSpan {
+    color: var(--create-card-green);
+}
+
 .chatRoomName {
     font-size: 20px;
     margin: 12px 0 8px 0;
