--- a/client/src/components/common/ChatNotice/ChatEndStudyNotice.module.css
+++ b/client/src/components/common/ChatNotice/ChatEndStudyNotice.module.css
@@ -1,9 +1,10 @@
-.chatRoomSelectDeck {
+.chatEndStudyNotice {
     min-height: 400px;
-    width: 80%;
+    width: 70%;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
+    align-items: center;
     text-align: center;
     font-family: var(--text-font);
     margin: 16px;
@@ -16,9 +17,9 @@
     align-items: center;
     justify-content: center;
     font-size: 28px;
-    height: 64px;
+    height: 72px;
     width: 100%;
-    color: var(--dark-gray);
+    color: var(--background-yellow);
     border-bottom: solid 2px var(--card-pink);
 }
 
@@ -29,44 +30,19 @@
 
 .heading {
     padding: 16px 0;
-    font-size: 24px;
-    color: var(--background-yellow);
+    color: var(--dark-gray);
+    height: 80%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
 }
 
 .headingText {
+    font-size: 24px;
     margin: 8px;
 }
 
-.roomDeets {
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-    padding: 16px 0;
-    border-bottom: solid 2px var(--pencil-gray);
-}
-
-.currentMembers {
-    color: var(--dark-gray);
-    padding: 0 16px;
-}
-
-.memberString {
-    padding: 0 16px;
-    color: var(--background-yellow);
-}
-
-.users {
-    padding: 16px;
-    display: flex;
-    justify-content: center;
-    gap: 8px;
-}
-
-.waitingMessage {
-    color: var(--dark-gray);
-    font-size: 24px;
-}
-
-.waitingText {
+.secondaryText {
+    font-size: 20px;
     margin: 8px !important;
 }
