--- a/client/src/components/common/ChatModal/ConfirmDeck/ConfirmDeck.module.css
+++ b/client/src/components/common/ChatModal/ConfirmDeck/ConfirmDeck.module.css
@@ -4,9 +4,9 @@
     grid-template-columns: 1fr;
     grid-template-rows: 1fr 2fr 2fr;
     grid-template-areas:
-    "header"
-    "heading"
-    "actions";
+        'header'
+        'heading'
+        'actions';
     background-color: var(--create-card-green);
     box-shadow: 3px 3px 6px var(--dark-gray);
 }
@@ -53,7 +53,7 @@
     justify-self: center;
     display: flex;
     justify-content: space-evenly;
-    width: 80%;    
+    width: 80%;
 }
 
 .cancel {
@@ -63,7 +63,7 @@
     border: none;
     outline: none;
     background-color: var(--create-card-green);
-    opacity: .8;
+    opacity: 0.8;
 }
 
 .cancel:hover {
