--- a/client/src/components/common/AbortActionConfirmationModal/AbortActionConfirmationModal.module.css
+++ b/client/src/components/common/AbortActionConfirmationModal/AbortActionConfirmationModal.module.css
@@ -18,7 +18,7 @@
 .header {
     text-align: center;
     border-top: solid 2px var(--card-pink);
-    width: 100%;;
+    width: 100%;
 }
 
 .headerText {
