--- a/client/src/components/common/ActionCard/ActionCard.module.css
+++ b/client/src/components/common/ActionCard/ActionCard.module.css
@@ -1,86 +1,86 @@
 @import url('../../../index.css');
 
 .actionCard {
-  width: 80%;
-  max-width: 220px;
-  height: 100px;
-  box-shadow: 2px 2px 4px var(--dark-gray);
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  text-align: center;
-  margin: 15px;
-  position: relative;
-  z-index: 0;
-  color: var(--background-yellow);
+    width: 80%;
+    max-width: 220px;
+    height: 100px;
+    box-shadow: 2px 2px 4px var(--dark-gray);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    margin: 15px;
+    position: relative;
+    z-index: 0;
+    color: var(--background-yellow);
 }
 
 .actionCard:hover {
-  cursor:pointer;
-  box-shadow: 2px 2px 4px var(--card-pink);
-  color: var(--pencil-gray);
+    cursor: pointer;
+    box-shadow: 2px 2px 4px var(--card-pink);
+    color: var(--pencil-gray);
 }
 
 .spacer {
-  height: 7px;
+    height: 7px;
 }
 
 .line {
-  width: 100%;
-  border: solid .2px var(--card-pink);
-  z-index: 2;
+    width: 100%;
+    border: solid 0.2px var(--card-pink);
+    z-index: 2;
 }
 
 .greyLines {
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-evenly;
-  gap: 5px;
-  z-index: 1;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    gap: 5px;
+    z-index: 1;
 }
 
 .greyLines:first-child {
-  border: none;
-  opacity: .01;
+    border: none;
+    opacity: 0.01;
 }
 
 .greyLines:nth-child(2) {
-  border: none;
-  opacity: .01;
+    border: none;
+    opacity: 0.01;
 }
 
 .greyLine {
-  width: 100%;
-  border: solid .5px var(--pencil-gray);
-  opacity: .2;
+    width: 100%;
+    border: solid 0.5px var(--pencil-gray);
+    opacity: 0.2;
 }
 
 .green {
-  background: var(--card-green);
+    background: var(--card-green);
 }
 
 .blue {
-  background: var(--action-blue);
+    background: var(--action-blue);
 }
 
 .purple {
-  background-color: var(--card-purple);
+    background-color: var(--card-purple);
 }
 
 .header {
-  width: 100%;
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  text-align: center;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
 }
 
 .text {
-  font-size: 32px;
-  position: absolute;
-  text-align: center;
-  left: 10%;
-  z-index: 3;
+    font-size: 32px;
+    position: absolute;
+    text-align: center;
+    left: 10%;
+    z-index: 3;
 }
