--- a/client/src/components/common/SelectedDeck/SelectedDeck.module.css
+++ b/client/src/components/common/SelectedDeck/SelectedDeck.module.css
@@ -75,8 +75,8 @@
     width: 100%;
     color: var(--pencil-gray);
     background: var(--pencil-gray);
-    border: solid .5px var(--pencil-gray);
-    opacity: .2;
+    border: solid 0.5px var(--pencil-gray);
+    opacity: 0.2;
 }
 
 .deckStats {
@@ -152,7 +152,7 @@
 .backBtn {
     font-family: var(--text-font);
     font-size: 30px;
-    opacity: .7;
+    opacity: 0.7;
     background-color: var(--background-yellow);
     color: var(--card-purple);
 }
