--- a/client/src/components/views/Chat/Chat.module.css
+++ b/client/src/components/views/Chat/Chat.module.css
@@ -7,9 +7,9 @@
     background: var(--background-yellow);
     grid-template-columns: 1fr;
     grid-template-rows: 100px auto;
-    grid-template-areas: 
-    "header"
-    "content";
+    grid-template-areas:
+        'header'
+        'content';
 }
 
 .chatPageContent {
@@ -23,5 +23,5 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding-top: 24px
+    padding-top: 24px;
 }
