--- a/client/src/components/views/CreateDeck/CreateDeck.module.css
+++ b/client/src/components/views/CreateDeck/CreateDeck.module.css
@@ -7,7 +7,7 @@
     background: var(--background-yellow);
     grid-template-columns: 1fr;
     grid-template-rows: 100px auto;
-    grid-template-areas: 
-    "header"
-    "content";
+    grid-template-areas:
+        'header'
+        'content';
 }
