--- a/client/src/components/views/FourOhFourPage/FourOhFourPage.module.css
+++ b/client/src/components/views/FourOhFourPage/FourOhFourPage.module.css
@@ -1,16 +1,16 @@
 @import url('../../../index.css');
 
 .fourOhFourPage {
-  height: 100vh;
-  width: 100vw;
-  display: grid;
-  color: var(--card-blue);
-  background: var(--background-yellow);
-  grid-template-columns: 1fr;
-  grid-template-rows: 100px auto;
-  grid-template-areas: 
-  "header"
-  "content";
+    height: 100vh;
+    width: 100vw;
+    display: grid;
+    color: var(--card-blue);
+    background: var(--background-yellow);
+    grid-template-columns: 1fr;
+    grid-template-rows: 100px auto;
+    grid-template-areas:
+        'header'
+        'content';
 }
 
 .fourOhFourContent {
@@ -37,7 +37,7 @@
 
 .goBack {
     color: var(--pencil-gray);
-    opacity: .7;
+    opacity: 0.7;
 }
 
 .goBack:hover {
