--- a/client/src/components/views/UserPage/UserPage.module.css
+++ b/client/src/components/views/UserPage/UserPage.module.css
@@ -1,34 +1,34 @@
 @import url('../../../index.css');
 
 .userPage {
-  height: 100vh;
-  width: 100vw;
-  display: grid;
-  color: var(--card-blue);
-  background: var(--background-yellow);
-  grid-template-columns: 1fr;
-  grid-template-rows: 100px auto;
-  grid-template-areas: 
-  "header"
-  "content";
+    height: 100vh;
+    width: 100vw;
+    display: grid;
+    color: var(--card-blue);
+    background: var(--background-yellow);
+    grid-template-columns: 1fr;
+    grid-template-rows: 100px auto;
+    grid-template-areas:
+        'header'
+        'content';
 }
 
 .content {
-  grid-area: content;
-  height: 100%;
-  color: var(--card-blue);
-  background: var(--background-yellow);
-  display: flex;
+    grid-area: content;
+    height: 100%;
+    color: var(--card-blue);
+    background: var(--background-yellow);
+    display: flex;
 }
 
 .feed {
-  flex: 1 0 75%;
-  padding-left: 40px;
-  color: var(--card-blue);
-  background: var(--background-yellow);
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+    flex: 1 0 75%;
+    padding-left: 40px;
+    color: var(--card-blue);
+    background: var(--background-yellow);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .headerContent {
