Don't really remember, fixing logout redirect, returning_rooms socket action, other stuff.

--- a/client/src/components/common/ChatRoomActionButton/ChatRoomActionButton.module.css
+++ b/client/src/components/common/ChatRoomActionButton/ChatRoomActionButton.module.css
@@ -1,3 +1,10 @@
+.resetBtnContainer {
+    display: flex;
+    gap: 24px;
+    justify-content: center;
+    width: 100%;
+}
+
 .btn {
     outline: none;
     border: var(--card-pink);
