--- a/client/src/components/common/ChatModal/ChatAction/ChatAction.module.css
+++ b/client/src/components/common/ChatModal/ChatAction/ChatAction.module.css
@@ -1,5 +1,5 @@
-.roomActionModal {
-    width: 80%;
+.chatActionModal {
+    width: 70%;
     display: grid;
     grid-template-columns: 1fr;
     grid-template-rows: 1fr 2fr 2fr;
@@ -53,12 +53,20 @@
     width: 80%;
 }
 
+.btn {
+    font-family: var(--text-font);
+    font-size: 30px;
+    color: white;
+    border: none;
+    outline: none;
+    padding: 12px;
+    min-width: 120px;
+}
+
 .cancel {
     font-family: var(--logo-font);
     color: var(--pencil-gray);
     font-size: 42px;
-    border: none;
-    outline: none;
     background-color: var(--create-card-green);
     opacity: 0.8;
 }
@@ -70,12 +78,7 @@
 }
 
 .confirm {
-    font-family: var(--text-font);
-    border: none;
     background-color: var(--card-pink);
-    color: white;
-    padding: 12px;
-    font-size: 30px;
     border-radius: 8px;
 }
 
