--- a/client/src/components/common/ChatModal/ChatModal.module.css
+++ b/client/src/components/common/ChatModal/ChatModal.module.css
@@ -1,7 +1,7 @@
-.chatRoomContainer {
+.chatModal {
     flex: 1 0 70%;
-    height: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
+    padding-top: 24px;
 }
