--- a/client/src/components/common/ChatRoom/ChatRoom.module.css
+++ b/client/src/components/common/ChatRoom/ChatRoom.module.css
@@ -1,7 +1,10 @@
 .chatRoom {
+    flex: 1 0 auto;
     width: 100%;
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
 }
 
 .header {
