--- a/client/src/components/common/RoomList/RoomList.module.css
+++ b/client/src/components/common/RoomList/RoomList.module.css
@@ -1,15 +1,45 @@
 .roomListContent {
     display: flex;
     flex-direction: column;
+    gap: 24px;
+    height: 100%;
     width: 100%;
     align-items: center;
     font-family: var(--logo-font);
 }
 
-.flipWithFriends {
+.pageHeader {
+    display: grid;
+    grid-template-columns: 1fr 3fr 1fr;
+    width: 80%;
+    padding: 24px;
+    padding-bottom: 0;
+}
+
+.backButton {
+    display: flex;
+    gap: 16px;
+    align-items: center;
+    padding: 12px;
+    border-radius: 4px;
+}
+
+.backButton:hover {
+    cursor: pointer;
+    color: var(--card-purple);
+}
+
+.backButtonLabel {
+    font-family: var(--text-font);
+    font-size: 24px;
+    margin: 0;
+}
+
+.pageHeaderText {
     font-size: 60px;
     color: var(--card-pink);
-    margin: 12px;
+    margin: 0px;
+    text-align: center;
 }
 
 .roomListContainer {
@@ -19,12 +49,11 @@
     flex-direction: column;
     text-align: center;
     font-family: var(--text-font);
-    margin: 15px;
     background-color: var(--background-yellow);
     box-shadow: 2px 2px 4px var(--pencil-gray);
 }
 
-.header {
+.roomListHeader {
     display: flex;
     flex-direction: column;
     align-items: center;
