--- a/client/src/components/common/ChatContainer/ChatContainer.module.css
+++ b/client/src/components/common/ChatContainer/ChatContainer.module.css
@@ -1,6 +1,7 @@
 .chatContainer {
     flex: 1 0 25%;
     width: 100%;
+    max-height: 900px;
     background: var(--background-yellow);
     display: flex;
     flex-direction: column;
@@ -15,6 +16,10 @@
     gap: 4px;
     overflow: auto;
     padding: 0 10px 8px 10px;
+}
+
+.chatMessageListItem {
+    display: flex;
 }
 
 .msg {
