--- a/client/src/components/common/ChatContainer/ChatContainer.module.css
+++ b/client/src/components/common/ChatContainer/ChatContainer.module.css
@@ -55,30 +55,29 @@
     position: relative;
     bottom: 0;
     width: 100%;
-    padding-top: 12px;
     background-color: var(--card-pink);
     height: 92px;
 }
 
 .actions {
-    position: relative;
-    border: solid 2px var(--card-pink);
-    border-radius: 4px;
     display: flex;
     align-items: center;
+    background-color: var(--card-pink);
+    border-radius: 8px;
     margin: 12px 8px;
 }
 
 .messageInput {
-    width: 100%;
+    flex: 1;
+    border: solid 2px var(--card-pink);
     background-color: var(--background-yellow);
-    border: none;
-    border-radius: 4px;
+    border-radius: 8px;
     height: 52px;
     color: var(--pencil-gray);
     font-family: var(--text-font);
     font-size: 20px;
-    padding-left: 4px;
+    padding: 12px;
+    resize: none;
 }
 
 .messageInput::placeholder {
@@ -87,21 +86,20 @@
 }
 
 .sendMsgBtn {
-    max-width: 42px;
-    position: absolute;
-    right: 8px;
-    background-color: var(--background-yellow);
+    flex: 0 0 42px;
+    background: transparent;
     outline: none;
     border: none;
     transform: rotate(10deg);
-    color: var(--card-pink);
+    color: var(--background-yellow);
 }
 
 .sendMsgBtn:hover {
     cursor: pointer;
-    color: var(--card-pink);
+    opacity: 0.8;
 }
 
 .sendMsgBtn:disabled {
+    cursor: not-allowed;
     opacity: 0.5;
 }
