--- a/client/src/components/common/ChatModal/CreateChatRoomForm/CreateChatRoomForm.module.css
+++ b/client/src/components/common/ChatModal/CreateChatRoomForm/CreateChatRoomForm.module.css
@@ -1,5 +1,26 @@
-.createRoomForm {
+.container {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
 	width: 80%;
+}
+
+.pageHeader {
+	text-align: center;
+	width: 80%;
+	padding: 24px;
+}
+
+.pageHeaderText {
+	font-size: 60px;
+	color: var(--card-pink);
+	margin: 0px;
+	text-align: center;
+	font-family: var(--logo-font);
+}
+
+.createRoomForm {
+	width: 100%;
 	display: grid;
 	grid-template-columns: 1fr;
 	grid-template-rows: 1fr 2fr 2fr;
@@ -11,7 +32,7 @@
 	box-shadow: 3px 3px 6px var(--dark-gray);
 }
 
-.header {
+.formHeader {
 	grid-area: header;
 	width: 100%;
 	padding: 16px;
@@ -27,25 +48,34 @@
 	align-self: center;
 	justify-self: center;
 	display: flex;
-	flex-direction: column;
 	align-items: center;
+	padding: 16px;
+	padding-bottom: 2px;
+	border-bottom: solid 1px var(--card-pink);
 }
 
 .label {
-	font-size: 24px;
-	margin-bottom: 16px;
+	font-family: var(--logo-font);
+	font-size: 44px;
+	margin: 0 16px;
 	color: var(--card-pink);
+}
+
+.gray {
+	color: var(--pencil-gray);
+	opacity: .8;
 }
 
 .input {
 	width: 90%;
-	border: solid 1px var(--card-pink);
-	background-color: rgb(92, 98, 116, 0.2);
+	background: transparent;
+	border: none;
 	font-family: var(--text-font);
+	padding-left: 8px;
 	font-size: 24px;
-	border-radius: 5px;
+	border-radius: 6px;
 	color: var(--pencil-gray);
-	height: 40px;
+	height: 60px;
 }
 
 .input::placeholder {
