--- a/client/src/components/common/ChatRoomSelectDeck/ChatRoomSelectDeck.module.css
+++ b/client/src/components/common/ChatRoomSelectDeck/ChatRoomSelectDeck.module.css
@@ -1,12 +1,33 @@
-.chatRoomSelectDeck {
-	min-height: 400px;
+.container {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	width: 100%;
+}
+
+.pageHeader {
+	text-align: center;
 	width: 80%;
+	padding: 24px;
+}
+
+.pageHeaderText {
+	font-size: 60px;
+	color: var(--card-pink);
+	margin: 0px;
+	text-align: center;
+	font-family: var(--logo-font);
+}
+
+.chatRoomSelectDeck {
+	min-height: 320px;
+	width: 75%;
 	display: flex;
 	flex-direction: column;
 	justify-content: space-around;
 	text-align: center;
+	margin-bottom: 16px;
 	font-family: var(--text-font);
-	margin: 16px;
 	background-color: var(--action-blue);
 	box-shadow: 2px 2px 4px var(--pencil-gray);
 }
@@ -16,15 +37,15 @@
 	align-items: center;
 	justify-content: center;
 	font-size: 28px;
-	height: 64px;
+	height: 15%;
 	width: 100%;
 	color: var(--dark-gray);
 	border-bottom: solid 2px var(--card-pink);
 }
 
 .roomName {
-	color: var(--background-yellow);
-	margin-left: 16px;
+	color: var(--card-blue);
+	margin-left: 8px;
 }
 
 .heading {
